test-cases/negative/test_007_incomplete_describe.lay
# negative test: incomplete describe statement
# expected: error should be thrown

describe 'my suite'


